--- a/NYTimesNewsApp.xcodeproj/xcshareddata/xcschemes/NYTimesNewsApp.xcscheme
+++ b/NYTimesNewsApp.xcodeproj/xcshareddata/xcschemes/NYTimesNewsApp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1240"
+   LastUpgradeVersion = "1300"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "615C831BCE925ED486B225B87E44926D"
-               BuildableName = "KeychainAccess.framework"
-               BlueprintName = "KeychainAccess"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "477F759028B522E1007D502B"
+               BuildableName = "NYTimesNewsApp.app"
+               BlueprintName = "NYTimesNewsApp"
+               ReferencedContainer = "container:NYTimesNewsApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -34,12 +34,23 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = "tr"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "477F759028B522E1007D502B"
+            BuildableName = "NYTimesNewsApp.app"
+            BlueprintName = "NYTimesNewsApp"
+            ReferencedContainer = "container:NYTimesNewsApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -47,6 +58,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "477F759028B522E1007D502B"
+            BuildableName = "NYTimesNewsApp.app"
+            BlueprintName = "NYTimesNewsApp"
+            ReferencedContainer = "container:NYTimesNewsApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
